--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>chapter2-design-patterns-and-principles</module>
 		<module>chapter3-generics-and-collections</module>
         <module>chapter4-functional-programming</module>
+        <module>chapter5-dates-strings-and-localization</module>
     </modules>
 
 
