--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>chapter3-generics-and-collections</module>
         <module>chapter4-functional-programming</module>
         <module>chapter5-dates-strings-and-localization</module>
+        <module>chapter6-exceptions-and-assertions</module>
     </modules>
 
 
