--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>chapter4-functional-programming</module>
         <module>chapter5-dates-strings-and-localization</module>
         <module>chapter6-exceptions-and-assertions</module>
+        <module>chapter7-concurrency</module>
     </modules>
 
 
