--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>chapter7-concurrency</module>
         <module>chapter8-io</module>
         <module>chapter9-nio2</module>
+        <module>chapter10-jdbc</module>
     </modules>
 
 
