--- a/ocp11-chapter11-oca-modules/pom.xml
+++ b/ocp11-chapter11-oca-modules/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ocp11-chapter6-modules</artifactId>
+    <artifactId>ocp11-chapter11-oca-modules</artifactId>
 
 
 </project>
