--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <module>chapter8-io</module>
         <module>chapter9-nio2</module>
         <module>chapter10-jdbc</module>
-		<module>ocp11-chapter6-modules</module>
+		<module>ocp11-chapter11-oca-modules</module>
 	</modules>
 
 
